<resources>
    <string name="app_name">Rent Car App</string>
    <string name="welcome">Welcome</string>
    <string name="user">To Rent Car</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter phone</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="create">Create</string>
    <string name="forgot_the_password">Forgot the password?</string>
    <string name="forgot_password">Forgot\nPassword?</string>
    <string name="reset_password">Reset\nPassword</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="continue_with">or continue with</string>
    <string name="google">Google</string>
    <string name="no_have_account">don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="fill_your_profile">Fill your profile</string>
    <string name="home">Home</string>
    <string name="rent">Rent</string>
    <string name="account">Account</string>
    <string name="my_profile">My profile</string>
    <string name="my_cards">My cards</string>
    <string name="my_driver_licence">My driver\'s licence</string>
    <string name="log_out">Log Out</string>
    <string name="book_now">Book Now</string>
    <string name="information">Information</string>
    <string name="rent_car">Rent Car</string>
    <string name="transmission">Transmission</string>
    <string name="type_of_fuel">Type of fuel</string>
    <string name="fuel_consumption">Fuel outlay</string>
    <string name="engine_volume">Engine volume</string>
    <string name="children_chair">Children chair</string>
    <string name="cars_class">Cars class</string>
    <string name="price">Price</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="automaton">Automaton</string>
    <string name="mechanic">Mechanic</string>
    <string name="gasoline">Gasoline</string>
    <string name="diesel">Diesel</string>
    <string name="business">Business</string>
    <string name="economy">Economy</string>
    <string name="medium">Medium</string>
    <string name="premium">Premium</string>
    <string name="suv">SUV</string>
    <string name="apply">Apply</string>
    <string name="select_place_date_time">Select place, date and time</string>
    <string name="choose_date_time">Choose date</string>
    <string name="sum">Sum </string>
    <string name="payment_details">Payment Details</string>
    <string name="fines">Fines</string>
    <string name="total">Total Amount</string>
    <string name="bank">Bank</string>
    <string name="add_your_credit_card">Add Your Credit Card</string>
    <string name="number_card">XXXX XXXX XXXX XXXX</string>
    <string name="driver_licence_number">XXXXXXXXX</string>
    <string name="add">Add</string>
    <string name="date">MM/YY</string>
    <string name="special_code">XXX</string>
    <string name="get_approved_to_drive">Get approved to drive</string>
    <string name="message_for_user">Since this is your first trip, you\'ll need to provide us information about your driver licence and credit card.</string>
    <string name="successful_text">Successful!!\nThe rental is processed, you can view your rentals in Rent.</string>
    <string name="next">Next</string>
    <string name="back_to_home">Back to Home</string>
    <string name="choose_payment_method">Choose Payment Method</string>
    <string name="station_issuing">Station Issuing</string>
    <string name="station_return">Station Return</string>
    <string name="date_issuing">Date Issuing</string>
    <string name="date_return">Date Return</string>
    <string name="my_favorite_cars">My Favorite Cars</string>
    <string name="my_rents">My Rents</string>
    <string name="rent_details">Rent Details</string>
    <string name="id_car">ID Car</string>
    <string name="status">Status</string>
    <string name="total_amount">Total Amount</string>
    <string name="return_car">Return Car</string>
    <string name="cancel_rent">Cancel Rent</string>
    <string name="oops">OOPS!</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
</resources>