<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.activity.SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_your_profile"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/guideline14"
        app:layout_constraintStart_toEndOf="@id/guideline13"
        app:layout_constraintTop_toBottomOf="@id/guideline15" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/avatar"
        android:scaleType="centerCrop"
        android:onClick="pickUpImage"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toStartOf="@id/guideline14"
        app:layout_constraintStart_toEndOf="@id/guideline13"
        app:layout_constraintTop_toBottomOf="@id/guideline16"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpUsername"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/guideline17"
        app:layout_constraintStart_toEndOf="@id/guideline13"
        app:layout_constraintEnd_toStartOf="@id/guideline14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_edittext"
            android:ems="15"
            android:hint="@string/enter_username"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpFullName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/signUpUsername"
        app:layout_constraintStart_toEndOf="@id/guideline13"
        app:layout_constraintEnd_toStartOf="@id/guideline14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newFullName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_edittext"
            android:ems="15"
            android:hint="@string/enter_full_name"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpEmail"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@id/guideline14"
        app:layout_constraintStart_toEndOf="@id/guideline13"
        app:layout_constraintTop_toBottomOf="@id/signUpFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_edittext"
            android:ems="15"
            android:hint="@string/enter_email"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/signUpEmail"
        app:layout_constraintStart_toEndOf="@id/guideline13"
        app:layout_constraintEnd_toStartOf="@id/guideline14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_edittext"
            android:ems="15"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPhone"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/signUpPassword"
        app:layout_constraintStart_toEndOf="@id/guideline13"
        app:layout_constraintEnd_toStartOf="@id/guideline14">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_edittext"
            android:ems="15"
            android:hint="@string/enter_phone"
            android:inputType="text"
            android:paddingStart="10dp"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/create"
        android:textSize="17sp"
        android:backgroundTint="@color/blue"
        android:onClick="createAccount"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/signUpPhone"
        app:layout_constraintStart_toEndOf="@id/guideline13"
        app:layout_constraintEnd_toStartOf="@id/guideline14"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="51dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="98dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="243dp" />
</androidx.constraintlayout.widget.ConstraintLayout>