<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".view.activity.MyProfileActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/updateAvatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        android:rotation="90"
        android:onClick="changePhoto"
        app:layout_constraintEnd_toStartOf="@id/guideline22"
        app:layout_constraintStart_toEndOf="@id/guideline21"
        app:layout_constraintTop_toBottomOf="@id/guideline23"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full" />

    <ImageView
        android:id="@+id/update"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:onClick="updateProfile"
        app:srcCompat="@drawable/update"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline23"
        app:layout_constraintEnd_toStartOf="@id/guideline22" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:onClick="back"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/baseline_keyboard_arrow_left_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline23"
        app:layout_constraintStart_toEndOf="@id/guideline21" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/updateFullName"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/guideline24"
        app:layout_constraintStart_toEndOf="@id/guideline21"
        app:layout_constraintEnd_toStartOf="@id/guideline22">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/accountFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:ems="15"
            android:hint="@string/enter_full_name"
            android:inputType="text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/updatePhone"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/updateFullName"
        app:layout_constraintStart_toEndOf="@id/guideline21"
        app:layout_constraintEnd_toStartOf="@id/guideline22">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/accountPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_edittext"
            android:ems="15"
            android:hint="@string/enter_phone"
            android:inputType="text"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="47dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="192dp" />
</androidx.constraintlayout.widget.ConstraintLayout>